# koi

./: README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  README.md  Rocket.toml
backend/src/: catchers.rs  main.rs
backend/src/algorithms/: a_star.rs
backend/src/guards/: auth.rs  json_limit.rs  mod.rs  revoke_jwt.rs  store_auth.rs
backend/src/machine learning/: t5.rs
backend/src/machine_learning/: mod.rs  t5.rs
backend/src/models/: mod.rs  user.rs  user_review.rs
backend/src/models/stores/: deal.rs  item.rs  mod.rs  review.rs  store.rs  store_review.rs
backend/src/models/users/: list.rs  mod.rs  recipe.rs  review.rs  user.rs  user_review.rs
backend/src/routes/: aasa.rs  auth.rs  mod.rs
backend/src/routes/auth/: change_password.rs  delete_account.rs  init.rs  login.rs  logout.rs  mod.rs  signup.rs
backend/src/routes/store/: create.rs  get_deals.rs  get_items.rs  get_reviews.rs  lookup.rs  mod.rs  rate.rs  update_info.rs
backend/src/routes/store/deal/: create.rs  delete.rs  edit.rs
backend/src/routes/store/item/: create.rs  delete.rs  edit.rs
backend/src/routes/user/: follow.rs  get_all_recipes.rs  get_fame.rs  get_lists.rs  get_random_users.rs  get_recipes.rs  get_reviews.rs  is_following.rs  lookup.rs  mod.rs  rate.rs  search_items.rs  search_users.rs  unfollow.rs  update_profile.rs
backend/src/routes/user/account/: allergies.rs  deals.rs  mod.rs  subscription.rs
backend/src/routes/user/chat/: end.rs  history.rs  (+3 more)
backend/src/scripts/: generate_keys.rs
backend/src/utils/: db.rs  functions.rs  jwt.rs  mod.rs  search.rs  t5.rs
(+54 files in other folders)
